--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,6 @@
-<p>Home page</p>
+<div class='header-container'>
+<h1>Micah Gram</h1>
+<h3>Saxophonist &#183; Guitarist &#183; Producer</h3>
+</div>
+
+
