--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,14 +1,11 @@
 <header>
-  <h1 class="logo">Template</h1>
+<!--  <h1 class="logo">Template</h1>-->
   <nav>
     <ul>
       <li><a routerLink="/" routerLinkActive="{ exact: true }">Home</a></li>
-      <li><a routerLink="page-two" routerLinkActive="active">Page Two</a></li>
-      <li><a routerLink="page-three" routerLinkActive="active">Page Three</a></li>
-      <li><a routerLink="page-four" routerLinkActive="active">Page Four</a></li>
-      <li>
-        <a routerLink="contact" routerLinkActive="active">Contact</a>
-      </li>
+      <li><a routerLink="about" routerLinkActive="active">About</a></li>
+      <li><a routerLink="shows" routerLinkActive="active">Shows</a></li>
+      <li><a routerLink="contact" routerLinkActive="active">Contact</a></li>
     </ul>
   </nav>
 </header>
