--- a/src/styles.css
+++ b/src/styles.css
@@ -3,9 +3,11 @@
   font-weight: inherit;
   font-family: 'Cormorant Garamond', serif;
   font-style: inherit;
-  font-size: 100%;
   border: 0 none;
   outline: 0;
   padding: 0;
   margin: 0;
+}
+html, body{
+  background-image: url("/assets/vinyl-record-background.jpg");
 }
